integrates\fix(front): #6079 new tables design
- filters no longer look weird in firefox
- this layout is quite annoying to work with
- in depth filters cleanup coming soon

--- a/integrates/front/src/styles/global.css
+++ b/integrates/front/src/styles/global.css
@@ -876,11 +876,11 @@ label {
 }
 
 :global .react-bootstrap-table td > .selection-input-4 {
-  margin: 0;
+  margin: 0 !important;
 }
 
 :global .react-bootstrap-table th > .selection-input-4 {
-  margin: 0;
+  margin: 0 !important;
 }
 
 :global .w-md-editor-text-input {
